fix: changed featured posts to be left aligned

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3802,7 +3802,7 @@ input, select, textarea {
 			}
 
 			#main > .post.featured {
-				text-align: center;
+				text-align: left;
 			}
 
 			@media screen and (max-width: 1280px) {
